# VibeVoice-CoreML

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/text_examples/: 1p_vibevoice copy.txt  1p_vibevoice_es.txt  1p_vibevoice_fr.txt
src/vibevoiceane/: configuration_vibevoice.py  configuration_vibevoice_streaming.py  numpy_realtime_inference.py  server.py  vibevoice_numpy_streaming_processor.py  wrapped_inference.py
src/vibevoiceane/frontend/: index.html
