[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibevoiceane"
version = "0.1.0dev0"
description = "VibeVoice TTS running on Apple Neural Engine"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "coremltools==9.0.0",
    "einops",
    "numpy>2",
    "transformers",
    "tqdm",
    "huggingface_hub",
    "fastapi>=0.128.0",
    "uvicorn>=0.39.0",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "aiofiles>=25.1.0",
    "ftfy>=6.3.1",
    "pydub>=0.25.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/0seba/vibevoice-ane"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
"vibevoiceane.server" = "vibevoiceane.server:start_server"
